# pyfastms

./: .gitignore  MANIFEST.in  README.md  README.rst  build.py  pyproject.toml  scripts.py  setup.py
fastms/: __init__.py  _solver.cpp  _solver.pxd  _solver.pyx
src/libfastms/solver/: solver.h
tests/: test_basic.py
